# DSP-Final-Project-Team11

./: README.md
FPGA/: benchmark.v  design.v
Pi/: CMakeLists.txt  adc_sampler.c  adc_sampler.h  bandprocessor.c  bandprocessor.h  fpga_spi.c  fpga_spi.h  led_display.c  led_display.h  main.c  max7219_display.c  max7219_display.h
